fix input appearence on safari

--- a/src/scss/_checkbox.scss
+++ b/src/scss/_checkbox.scss
@@ -70,6 +70,7 @@ $toggle-control-size: $toggle-height;
   }
 
   input {
+    -webkit-appearance: none;
     appearance: none;
     display: block;
     cursor: pointer;
