--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -81,6 +81,7 @@
     top: -2px;
     left: -2px;
     bottom: -2px;
+    -webkit-appearance: none;
     appearance: none;
     width: calc(100% + 5px);
     margin: 0;
